--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ms_range
-description: A powerfull lib to creante and compare number ranges
+description: A powerfull lib to creante ranges and compare if number is in range
 version: 0.1.0
 author: Marcus Duarte <marcusedu7@gmail.com>
 homepage: https://github.com/Marcus-Software/ms_range
